--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -47,10 +47,11 @@
       </div>
       <div class="form-group d-flex ">
         <div class="form-check pe-4">
-          <label class="form-check-label" for="exampleCheck1">full-time</label>
           <input type="checkbox" class="form-check-input" id="exampleCheck1" />
+          <label class="form-check-label" for="exampleCheck1">full-time</label>
+         
         </div>
-        <div class="form-check">
+        <div class="form-check pe-4">
           <input
             class="form-check-input"
             type="checkbox"
