unwanted comments removal

--- a/src/app/register-dialog/register-dialog.component.html
+++ b/src/app/register-dialog/register-dialog.component.html
@@ -1,11 +1,15 @@
 <mat-dialog-content>
-    <form (ngSubmit)="onSubmit()" [formGroup]="registrationForm">
+  <form (ngSubmit)="onSubmit()" [formGroup]="registrationForm">
     <div class="row">
       <div class="col-4 d-flex flex-column">
         <div>
           <!-- Show the image if it's uploaded -->
-          <img *ngIf="img1" [src]="img1" alt="Uploaded Image" style="height: 139px;
-          width: 135px;" />
+          <img
+            *ngIf="img1"
+            [src]="img1"
+            alt="Uploaded Image"
+            style="height: 139px; width: 135px"
+          />
           <!-- Show a placeholder thumbnail if no image is uploaded -->
           <!-- <img *ngIf="!img1" src="https://img.freepik.com/free-vector/businessman-character-avatar-isolated_24877-60111.jpg?w=740&t=st=1710861356~exp=1710861956~hmac=2b17ed323dc412170f8d56084d00cc26df95a47e80b05b6135b1c68802c7d634" alt="Placeholder Image" style="height: 139px;
           width: 135px;" /> -->
@@ -14,44 +18,65 @@
         </div>
         <div>
           <!-- Move the input file element below the preview image -->
-          <label for="profilePhoto" class="upload-label">upload your photo</label>
+          <label for="profilePhoto" class="upload-label"
+            >upload your photo</label
+          >
           <!-- Hidden file input -->
           <input
             type="file"
             id="profilePhoto"
             (change)="handleUpload($event)"
             accept="image/*"
-            style="display: none;"
+            style="display: none"
           />
-          <div *ngIf="f.firstName.touched && f.firstName.errors" class="error-msg">
-          <span *ngIf="f.firstName.errors.required">This field is required</span>
-          <span *ngIf="registrationForm.controls.profilePhoto.errors?.invalidDimensions" class="error-msg">
-            Image dimensions should be 310x325 pixels
-          </span>
-        </div>
+          <div
+            *ngIf="f.firstName.touched && f.firstName.errors"
+            class="error-msg"
+          >
+            <span *ngIf="f.firstName.errors.required"
+              >This field is required</span
+            >
+            <span
+              *ngIf="
+                registrationForm.controls.profilePhoto.errors?.invalidDimensions
+              "
+              class="error-msg"
+            >
+              Image dimensions should be 310x325 pixels
+            </span>
+          </div>
         </div>
         <!-- <div *ngIf="profilePhoto.errors.required">
           this field is required
         </div> -->
       </div>
-      
+
       <div class="col-8">
         <div class="row mb-0">
           <div class="col-6">
             <input
-                type="text"
-                id="firstName"
-                formControlName="firstName"
-                class="form-control"
-                placeholder="First name"
+              type="text"
+              id="firstName"
+              formControlName="firstName"
+              class="form-control"
+              placeholder="First name"
             />
-            <span *ngIf="f.firstName.touched && f.firstName.errors" class="error-msg">
-              <span *ngIf="f.firstName.errors.required">This field is required</span>
-              <span *ngIf="f.firstName.errors.noNumbers">Numbers are not allowed</span>
-              <span *ngIf="f.firstName.errors.maxlength">Max 22 Chars Allowed</span>
+            <span
+              *ngIf="f.firstName.touched && f.firstName.errors"
+              class="error-msg"
+            >
+              <span *ngIf="f.firstName.errors.required"
+                >This field is required</span
+              >
+              <span *ngIf="f.firstName.errors.noNumbers"
+                >Numbers are not allowed</span
+              >
+              <span *ngIf="f.firstName.errors.maxlength"
+                >Max 22 Chars Allowed</span
+              >
               <!-- <span *ngIf="f.firstName.errors.pattern">jhhgjhvjhvjvjhgvyvjhv</span> -->
-          </span>
-        </div>
+            </span>
+          </div>
           <div class="col-6">
             <input
               type="text"
@@ -60,9 +85,14 @@
               formControlName="lastName"
               placeholder="Last name"
             />
-            <span *ngIf="f.lastName.touched && f.lastName.errors" class="error-msg">
+            <span
+              *ngIf="f.lastName.touched && f.lastName.errors"
+              class="error-msg"
+            >
               <span *ngIf="f.lastName.required">this field is required</span>
-              <span *ngIf="f.lastName.errors.noNumbers">Numbers are not allowed</span>
+              <span *ngIf="f.lastName.errors.noNumbers"
+                >Numbers are not allowed</span
+              >
             </span>
           </div>
         </div>
@@ -73,11 +103,12 @@
             id="emailId"
             formControlName="emailId"
             placeholder="Enter your mail Id"
-            
           />
           <span *ngIf="f.emailId.touched && f.emailId.errors" class="error-msg">
             <span *ngIf="f.emailId.errors.required">Email is required</span>
-            <span *ngIf="f.emailId.errors.email">Enter a valid email address</span>
+            <span *ngIf="f.emailId.errors.email"
+              >Enter a valid email address</span
+            >
           </span>
         </div>
 
@@ -89,11 +120,18 @@
             id="mobileNumber"
             formControlName="mobileNumber"
             placeholder="Enter your mobile number"
-            pattern="[0-9]{10}" 
+            pattern="[0-9]{10}"
           />
-          <span *ngIf="f.mobileNumber.touched && f.mobileNumber.errors" class="error-msg">
-            <span *ngIf="f.mobileNumber.errors.required">Mobile number is required</span>
-            <span *ngIf="f.mobileNumber.errors.pattern">Invalid mobile number</span>
+          <span
+            *ngIf="f.mobileNumber.touched && f.mobileNumber.errors"
+            class="error-msg"
+          >
+            <span *ngIf="f.mobileNumber.errors.required"
+              >Mobile number is required</span
+            >
+            <span *ngIf="f.mobileNumber.errors.pattern"
+              >Invalid mobile number</span
+            >
           </span>
         </div>
         <div class="row">
@@ -114,7 +152,7 @@
               placeholder="Age"
             />
           </div>
-          <div  *ngIf="f.age.touched && f.age.errors" class="error-msg col-12">
+          <div *ngIf="f.age.touched && f.age.errors" class="error-msg col-12">
             <p *ngIf="f.age.touched">this field is required</p>
           </div>
         </div>
@@ -126,92 +164,162 @@
             placeholder="Country"
             required
             /> -->
-            <select formControlName="country" id="country"  placeholder="Country" class="form-control" required >
-              <option value="">Select Country</option>
-              <option *ngFor="let country of countries" [value]="country.name">{{ country.name }}</option>
-            </select>
-            <span *ngIf="f.country.touched && f.country.errors?.required" class="error-msg">
-              Country is required
-            </span>
+          <select
+            formControlName="country"
+            id="country"
+            placeholder="Country"
+            class="form-control"
+            required
+          >
+            <option value="">Select Country</option>
+            <option *ngFor="let country of countries" [value]="country.name">
+              {{ country.name }}
+            </option>
+          </select>
+          <span
+            *ngIf="f.country.touched && f.country.errors?.required"
+            class="error-msg"
+          >
+            Country is required
+          </span>
+        </div>
+        <div class="form-group">
+          <select
+            formControlName="state"
+            id="state"
+            class="form-control"
+            [disabled]="!registrationForm.get('country').value"
+          >
+            <option value="">Select State</option>
+            <option
+              *ngFor="
+                let state of getStatesForCountry(
+                  registrationForm.get('country').value
+                )
+              "
+              [value]="state"
+            >
+              {{ state }}
+            </option>
+          </select>
+          <span
+            *ngIf="f.state.touched && f.state.errors?.required"
+            class="error-msg"
+          >
+            State is required
+          </span>
+        </div>
+        <div class="form-group">
+          <select
+            formControlName="addressType"
+            id="addressType"
+            class="form-control"
+          >
+            <option value="">Select Address Type</option>
+            <option value="home">Home</option>
+            <option value="company">Company</option>
+          </select>
+          <span
+            *ngIf="f.addressType.touched && f.addressType.errors"
+            class="error-msg"
+          >
+            <span *ngIf="f.addressType.errors.required"
+              >Address type is required</span
+            >
+          </span>
+        </div>
+
+        <div *ngIf="registrationForm.get('addressType').value === 'home'">
+          <div class="form-group">
+            <input
+              type="text"
+              class="form-control"
+              id="homeAddress1"
+              formControlName="homeAddress1"
+              placeholder="Enter Address 1"
+            />
           </div>
           <div class="form-group">
-            <select formControlName="state" id="state" class="form-control" [disabled]="!registrationForm.get('country').value">
-              <option value="">Select State</option>
-              <option *ngFor="let state of getStatesForCountry(registrationForm.get('country').value)" [value]="state">{{ state }}</option>
-            </select>
-            <span *ngIf="f.state.touched && f.state.errors?.required" class="error-msg">
-              State is required
-            </span>
+            <input
+              type="text"
+              class="form-control"
+              id="homeAddress2"
+              formControlName="homeAddress2"
+              placeholder="Enter Address 2"
+            />
+          </div>
+        </div>
+
+        <div *ngIf="registrationForm.get('addressType').value === 'company'">
+          <div class="form-group">
+            <input
+              type="text"
+              class="form-control"
+              id="companyAddress1"
+              formControlName="companyAddress1"
+              placeholder="Enter Company Address 1"
+            />
           </div>
           <div class="form-group">
-            <select formControlName="addressType" id="addressType" class="form-control" >
-              <option value="">Select Address Type</option>
-              <option value="home">Home</option>
-              <option value="company">Company</option>
-            </select>
-            <span *ngIf="f.addressType.touched && f.addressType.errors" class="error-msg">
-              <span *ngIf="f.addressType.errors.required">Address type is required</span>
-            </span>
+            <input
+              type="text"
+              class="form-control"
+              id="companyAddress2"
+              formControlName="companyAddress2"
+              placeholder="Enter Company Address 2"
+            />
           </div>
-          <!-- Conditional rendering for Home address -->
-          <div *ngIf="registrationForm.get('addressType').value === 'home'">
-            <div class="form-group">
-              <!-- <label for="homeAddress1">Address 1:</label> -->
-              <input type="text" class="form-control" id="homeAddress1" formControlName="homeAddress1" placeholder="Enter Address 1">
-            </div>
-            <div class="form-group">
-              <!-- <label for="homeAddress2">Address 2:</label> -->
-              <input type="text" class="form-control" id="homeAddress2" formControlName="homeAddress2" placeholder="Enter Address 2">
-            </div>
-          </div>
-        
-          <!-- Conditional rendering for Company address -->
-          <div *ngIf="registrationForm.get('addressType').value === 'company'">
-            <div class="form-group">
-              <!-- <label for="companyAddress1">Company Address 1:</label> -->
-              <input type="text" class="form-control" id="companyAddress1" formControlName="companyAddress1" placeholder="Enter Company Address 1">
-            </div>
-            <div class="form-group">
-              <!-- <label for="companyAddress2">Company Address 2:</label> -->
-              <input type="text" class="form-control" id="companyAddress2" formControlName="companyAddress2" placeholder="Enter Company Address 2">
-            </div>
-          </div>        
-          <div>
-            <mat-form-field class="example-chip-list">
-          <!-- <input type="text" formControlName="tags" placeholder="Tags" /> -->
-          <mat-chip-grid #chipGrid aria-label="Enter tags">
-            <ng-container *ngFor="let fruit of fruits; trackBy: trackByFn">
+        </div>
+        <div>
+          <mat-form-field class="example-chip-list">
+            <mat-chip-grid #chipGrid aria-label="Enter tags">
+              <ng-container *ngFor="let fruit of fruits; trackBy: trackByFn">
                 <mat-chip-row
                   (removed)="remove(fruit)"
                   [editable]="true"
                   (edited)="edit(fruit, $event)"
-                  [aria-description]="'press enter to edit ' + fruit.name">
-                  {{fruit.name}}
-                  <button matChipRemove [attr.aria-label]="'remove ' + fruit.name">
+                  [aria-description]="'press enter to edit ' + fruit.name"
+                >
+                  {{ fruit.name }}
+                  <button
+                    matChipRemove
+                    [attr.aria-label]="'remove ' + fruit.name"
+                  >
                     <mat-icon>cancel</mat-icon>
                   </button>
                 </mat-chip-row>
-            </ng-container>
-            <input placeholder="Enter tags"
-                   [matChipInputFor]="chipGrid"
-                   [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                   [matChipInputAddOnBlur]="addOnBlur"
-                   (matChipInputTokenEnd)="add($event)"
-                   formControlName="tags"/>
-          </mat-chip-grid>
-        </mat-form-field>
+              </ng-container>
+              <input
+                placeholder="Enter tags"
+                [matChipInputFor]="chipGrid"
+                [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                [matChipInputAddOnBlur]="addOnBlur"
+                (matChipInputTokenEnd)="add($event)"
+                formControlName="tags"
+              />
+            </mat-chip-grid>
+          </mat-form-field>
           <span *ngIf="f.tags.touched && f.tags.errors" class="error-msg">
             <span *ngIf="f.tags.touched">this field is required</span>
           </span>
-        
         </div>
         <div>
           <input type="checkbox" id="subscribe" formControlName="subscribe" />
           <label for="subscribe">Subscribe to Newsletter</label>
         </div>
         <div class="">
-          <button mat-button type="button" class="m-3 " style="color: white;background-color: lightgrey;" (click)="onCancel()">Cancel</button>
-          <button mat-button type="submit" class="aboutbtn">{{data?'Update':'Submit'}}</button>
+          <button
+            mat-button
+            type="button"
+            class="m-3"
+            style="color: white; background-color: lightgrey"
+            (click)="onCancel()"
+          >
+            Cancel
+          </button>
+          <button mat-button type="submit" class="aboutbtn">
+            {{ data ? "Update" : "Submit" }}
+          </button>
         </div>
       </div>
     </div>
