click on openEditForm at Edit profile

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -17,7 +17,7 @@
         <div class="col-4  justify-content-around pb-2">        
             <div class="pb-3"><img src="{{data1?.profilePhoto}}" alt=""></div>
            <div> <button class="edit-button" (click)="openEditForm(data1)">Edit Photo</button>
-            <button class="edit-button">Edit profile</button>
+            <button class="edit-button" (click)="openEditForm(data1)">Edit profile</button>
           </div>
         </div>
         <div class="col-6 pb-md-5">
